[OSD-21095-fix-olm-template] fix olm template

--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -69,7 +69,7 @@ parameters:
     require: false
     value: "309956199498"
   - name: OPT_IN_REGIONS
-    required: "false"
+    required: false
 
 objects:
   - apiVersion: operators.coreos.com/v1alpha1
