[OSD-24538] generated files updated

--- a/deploy/crds/aws.managed.openshift.io_accountclaims.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accountclaims.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.15.0
   name: accountclaims.aws.managed.openshift.io
 spec:
   group: aws.managed.openshift.io
@@ -33,14 +33,19 @@ spec:
         description: AccountClaim is the Schema for the accountclaims API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -59,9 +64,9 @@ spec:
                 properties:
                   regions:
                     items:
-                      description: AwsRegions struct contains specific AwsRegion information,
-                        at the moment its just name but in the future it will contain
-                        specific resource limits etc.
+                      description: |-
+                        AwsRegions struct contains specific AwsRegion information, at the moment its just
+                        name but in the future it will contain specific resource limits etc.
                       properties:
                         name:
                           type: string
