Fix list type to make `make container-generate` happy

--- a/deploy/crds/aws.managed.openshift.io_accounts.yaml
+++ b/deploy/crds/aws.managed.openshift.io_accounts.yaml
@@ -135,6 +135,7 @@ spec:
                       type: string
                   type: object
                 type: array
+                x-kubernetes-list-type: atomic
               optInRegions:
                 additionalProperties:
                   properties:
