OSD-28574 enforce cpu and memory limits for aws account operator

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -21,6 +21,10 @@ spec:
           command:
           - aws-account-operator
           imagePullPolicy: Always
+          resources:
+            limits:
+              cpu: "200m"
+              memory: "2Gi"
           env:
             - name: WATCH_NAMESPACE
               value: ""
