Updates to prevent stuck subscriptions

--- a/hack/olm-registry/olm-artifacts-template.yaml
+++ b/hack/olm-registry/olm-artifacts-template.yaml
@@ -89,6 +89,7 @@ objects:
     metadata:
       name: aws-account-operator-og
     spec:
+      upgradeStrategy: TechPreviewUnsafeFailForward 
       targetNamespaces:
         - aws-account-operator
 
