--- a/.tekton/aws-account-operator-pull-request.yaml
+++ b/.tekton/aws-account-operator-pull-request.yaml
@@ -8,10 +8,7 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: 'true'
     pipelinesascode.tekton.dev/max-keep-runs: '3'
-    pipelinesascode.tekton.dev/on-cel-expression: "event == \"pull_request\" \n&&\
-      \ target_branch == \"master\"\n&& (\"**/*.go\".pathChanged() ||\n    \"**/go.*\"\
-      .pathChanged() ||\n    \"build/Dockerfile\".pathChanged() ||\n    \".tekton/aws-account-operator-pull-request.yaml\"\
-      .pathChanged() ) \n"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "master"
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: aws-account-operator
