--- a/.tekton/aws-account-operator-push.yaml
+++ b/.tekton/aws-account-operator-push.yaml
@@ -7,10 +7,7 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: 'false'
     pipelinesascode.tekton.dev/max-keep-runs: '3'
-    pipelinesascode.tekton.dev/on-cel-expression: "event == \"push\" \n&& target_branch\
-      \ == \"master\"\n&& (\"**/*.go\".pathChanged() ||\n    \"**/go.*\".pathChanged()\
-      \ ||\n    \"build/Dockerfile\".pathChanged() ||\n    \".tekton/aws-account-operator-push.yaml\"\
-      .pathChanged() ) \n"
+    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "master"
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: aws-account-operator
